# ROS-Projects

./: .gitignore  LICENSE  README.md  bashrc-cfg.sh  conspect.md  package_creator.py
.package_creator/: defaults.yaml
my_pack/: package.xml
my_pack/scripts/: add_two_ints_server.py
my_pack/src/: add_two_ints_server.cpp  listener.cpp
src/: package_creator.py
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_srvcli/: CMakeLists.txt  package.xml
src/cpp_srvcli/src/: add_two_ints_client.cpp
src/image_processing/: README.md
src/image_processing/calibration_publisher/: CMakeLists.txt  package.xml
src/image_processing/calibration_publisher/include/calibration_publisher/: calibration_publisher.hpp
src/image_processing/calibration_publisher/src/: calibration_publisher.cpp
src/image_processing/feature_projection/: CMakeLists.txt  package.xml
src/image_processing/feature_projection/include/feature_projection/: feature_projector_lanelet.hpp  transform_listener.hpp
src/image_processing/feature_projection/launch/: feat_proj.launch.py
src/image_processing/feature_projection/src/: feature_projector_lanelet.cpp
src/image_processing/feature_projection/yaml/: adjust_defaults.yaml  camera_config.yaml
src/image_processing/image_processing_launch/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/image_processing/image_processing_launch/launch/: image_processing.launch.py
src/image_processing/image_processing_launch/yaml/: camera_center.yaml  cameras.yaml
src/image_processing/image_processing_utilities/: Rt_matrix_getter.ipynb  package.xml  setup.cfg  setup.py
src/image_processing/image_processing_utilities/image_processing_utilities/: slider.py  tf_broadcaster.py
src/image_processing/image_processor/: CMakeLists.txt  package.xml
src/image_processing/image_processor/include/image_processor/: image_rectifier_node.hpp
src/image_processing/image_processor/src/: image_rectifier_node.cpp
src/my_package/: CMakeLists.txt  package.xml
src/my_package_py/: package.xml  setup.py
src/py_pubsub/: package.xml  setup.py
src_ros_kinetic/: conspect.md
src_ros_kinetic/my_pack/: .env  CMakeLists.txt
src_ros_kinetic/my_pack/scripts/: add_two_ints_client.py
src_ros_kinetic/my_pack/src/: add_two_ints_client.cpp  talker.cpp
