<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_processing_utilities</name>
  <version>0.0.0</version>
  <description>Utilities for Image Processing meta-package</description>
  <maintainer email="sergey.mirzoev@nami.ru">Sergey Mirzoev</maintainer>
  <license>Apache License 2.0</license>

  <depend>autoware_auto_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
